@startuml AgriUAV_ClassDiagram
' ============================================================
' AgriUAV Platform — Class Diagram
' ITA301 Summer 2026 | Group 3
' Tool: PlantUML | Render: https://www.plantuml.com/plantuml
' v2 — Logic/multiplicity/traceability fixes (see DELTA_CHANGELOG):
'   M5: SprayOrder<->Drone / Operator multiplicity 0..* to 0..1 (PENDING orders unassigned)
'   M6: Cooperative associations to HTXManager / Operator / Agronomist / Field added
'   m1: Report aggregates 1..* FlightLogs (a log may appear in 0..* reports)
'   m2: SprayOrder.statusReason added (Weather / Lacking safety confirmation / Needs Review)
'   m3: Notification class added (FR17 SMS/Zalo home)
'   m5: SprayFormula.configuredBy attribute removed (kept Agronomist..>SprayFormula association)
'   Note: FR18 in D2 must be updated from "4 roles" to 5 (Agronomist) to match this enum.
' ============================================================

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Arial
skinparam classHeaderBackgroundColor #2E75B6
skinparam classBorderColor #2E75B6
skinparam classBackgroundColor #EBF3FB
skinparam classFontColor #1F2937
skinparam ArrowColor #2E75B6
skinparam ArrowThickness 1.5
skinparam linetype ortho

' -- ENUMERATIONS --------------------------------------------
enum UserRole {
  ADMIN
  HTX_MANAGER
  OPERATOR
  FARMER
  AGRONOMIST
}

enum OrderStatus {
  PENDING
  ASSIGNED
  IN_PROGRESS
  COMPLETED
  SUSPENDED
  CANCELLED
}

enum DroneStatus {
  IDLE
  FLYING
  MAINTENANCE
  OFFLINE
}

enum AuditEventType {
  ORDER_CREATED
  ORDER_CANCELLED
  WEATHER_OVERRIDE
  REPORT_EXPORTED
  DATA_ACCESS
  CHECKIN
  CHECKOUT
}

' -- ABSTRACT BASE CLASS -------------------------------------
abstract class User {
  - userId: String
  - fullName: String
  - email: String
  - passwordHash: String
  - role: UserRole
  - isActive: Boolean
  - createdAt: DateTime
  + login(): Boolean
  + logout(): void
  + updateProfile(): void
}

note right of User
  ADMIN (role) has full access and no
  domain-specific behaviour, so it is
  modelled via the role attribute only
  (no concrete Admin subclass). FR18 (D2)
  must list 5 roles to match UserRole.
end note

' -- CONCRETE USER SUBCLASSES --------------------------------
class Farmer {
  - farmerId: String
  + bookSpraying(): SprayOrder
  + viewOrderHistory(): List<SprayOrder>
  + viewFieldList(): List<Field>
}

class Operator {
  - operatorId: String
  - cooperativeId: String
  - certificateNumber: String
  - certificateExpiry: Date
  - operationalStatus: String
  + checkIn(orderId: String, lat: Double, lng: Double): Boolean
  + checkOut(orderId: String, pesticideUsed: Double, areaSprayed: Double): void
  + receiveAssignment(): SprayOrder
}

class HTXManager {
  - managerId: String
  - cooperativeId: String
  + assignDrone(orderId: String): Boolean
  + exportComplianceReport(period: String): Report
  + monitorFleet(): List<Drone>
  + viewCalendar(): List<SprayOrder>
  + overrideWeatherBlock(orderId: String, reason: String): void
}

class Agronomist {
  - agronomistId: String
  - cooperativeId: String
  + configureFormula(fieldId: String): SprayFormula
  + updatePesticideRegistry(): void
  + viewFieldHistory(fieldId: String): List<FlightLog>
}

' -- COOPERATIVE ---------------------------------------------
class Cooperative {
  - cooperativeId: String
  - name: String
  - province: String
  - address: String
  - maxDrones: Integer = 50
  + getDroneFleet(): List<Drone>
  + getActiveOrders(): List<SprayOrder>
}

' -- FIELD & FORMULA -----------------------------------------
class Field {
  - fieldId: String
  - farmerId: String
  - cooperativeId: String
  - fieldName: String
  - cropType: String
  - areaHa: Double
  - gpsPolygon: String
  - createdAt: DateTime
  + calculateArea(): Double
  + validateBoundary(): Boolean
  + getSprayHistory(): List<FlightLog>
}

class SprayFormula {
  - formulaId: String
  - fieldId: String
  - pesticideId: String
  - dosageLPerHa: Double
  - sprayCountPerSeason: Integer
  + calculateTotalVolume(areaHa: Double): Double
  + updateFormula(): void
}

' -- DRONE ---------------------------------------------------
class Drone {
  - droneId: String
  - cooperativeId: String
  - serialNumber: String
  - model: String
  - tankCapacityL: Double
  - batteryPercent: Integer
  - status: DroneStatus
  - gpsLat: Double
  - gpsLng: Double
  - updatedAt: DateTime
  + isAvailable(): Boolean
  + updatePosition(lat: Double, lng: Double): void
  + sendAlert(alertType: String): void
}

' -- SPRAY ORDER ---------------------------------------------
class SprayOrder {
  - orderId: String
  - farmerId: String
  - fieldId: String
  - droneId: String
  - operatorId: String
  - scheduledDate: DateTime
  - actualStartTime: DateTime
  - status: OrderStatus
  - statusReason: String
  - pestAmountL: Double
  - cancelReason: String
  + checkConflict(): Boolean
  + assign(droneId: String, operatorId: String): void
  + cancel(reason: String): void
  + updateStatus(status: OrderStatus): void
}

' -- FLIGHT LOG ----------------------------------------------
class FlightLog {
  - logId: String
  - orderId: String
  - droneId: String
  - operatorId: String
  - checkInTime: DateTime
  - checkOutTime: DateTime
  - checkInLat: Double
  - checkInLng: Double
  - pesticideUsedL: Double
  - areaSprayed: Double
  - gpsTrail: String
  - manualOverride: Boolean
  - syncedAt: DateTime
  + generateDecree288Report(): Report
  + exportVietGAP(): File
}

' -- PESTICIDE (Master Registry — BVTV approval) -------------
class Pesticide {
  - pesticideId: String
  - name: String
  - activeIngredient: String
  - isApprovedBVTV: Boolean
  + checkApproval(): Boolean
}

' -- PESTICIDE STOCK (per Cooperative — FR16) ----------------
class PesticideStock {
  - stockId: String
  - cooperativeId: String
  - pesticideId: String
  - stockL: Double
  - lowStockThresholdL: Double
  - updatedAt: DateTime
  + deductStock(amount: Double): void
  + isLowStock(): Boolean
  + triggerLowStockAlert(): void
}

' -- GEOFENCE ------------------------------------------------
class Geofence {
  - geofenceId: String
  - fieldId: String
  - boundaryPolygon: String
  - bufferMeters: Integer = 50
  - hazardZones: String
  - isActive: Boolean
  + isInsideBoundary(lat: Double, lng: Double): Boolean
  + checkPowerLineBuffer(lat: Double, lng: Double): Boolean
  + activate(): void
}

' -- REPORT --------------------------------------------------
class Report {
  - reportId: String
  - generatedBy: User
  - cooperativeId: String
  - reportType: String
  - periodStart: Date
  - periodEnd: Date
  - fileFormat: String
  - fileUrl: String
  - exportedAt: DateTime
  + generatePDF(): File
  + generateExcel(): File
}

' -- NOTIFICATION (FR17 — SMS / Zalo / Push) -----------------
class Notification {
  - notificationId: String
  - recipientId: String
  - channel: String
  - eventType: String
  - content: String
  - status: String
  - sentAt: DateTime
  + send(): Boolean
}

' -- AUDIT LOG (NFR05 — UC01/UC06/UC08/UC10) -----------------
class AuditLog {
  - auditId: String
  - eventType: AuditEventType
  - actorId: String
  - actorRole: UserRole
  - targetEntityId: String
  - targetEntityType: String
  - description: String
  - ipAddress: String
  - occurredAt: DateTime
  + getEventHistory(entityId: String): List<AuditLog>
}

' -- RELATIONSHIPS -------------------------------------------
' Inheritance
User <|-- Farmer
User <|-- Operator
User <|-- HTXManager
User <|-- Agronomist

' Cooperative membership (FK-backed)
Cooperative "1" o-- "1..*" HTXManager     : managed by
Cooperative "1" o-- "0..*" Operator       : employs
Cooperative "1" o-- "0..*" Agronomist     : employs
Cooperative "1" o-- "1..*" Drone          : manages (max 50)
Cooperative "1" o-- "0..*" Field          : contains
Cooperative "1" o-- "0..*" PesticideStock : holds stock

' Field hierarchy
Farmer "1" --> "0..*" Field        : owns
Field  "1" --> "1"    SprayFormula : has
Field  "1" --> "1"    Geofence     : has safety boundary

' Order lifecycle (0..1 drone/operator: PENDING orders are unassigned)
Farmer     "1"    --> "0..*" SprayOrder : places
SprayOrder "0..*" --> "0..1" Drone      : assigned to
SprayOrder "0..*" --> "0..1" Operator   : assigned to
SprayOrder "1"    ..> "0..1" FlightLog  : generates

' Formula & pesticide
Pesticide  "1" --> "0..*" SprayFormula   : used in
Pesticide  "1" --> "0..*" PesticideStock : stocked as
Agronomist "1" --> "0..*" SprayFormula   : configures

' Compliance (a report aggregates many flight logs)
Report "0..*" o-- "1..*" FlightLog : aggregates

' Notification (FR17)
SprayOrder "1" --> "0..*" Notification : triggers
User       "1" --> "0..*" Notification : receives

' Audit trail (append-only)
User     "1" --> "0..*" AuditLog : actor in
AuditLog ..>  AuditEventType : eventType

' Enum associations
User       ..> UserRole    : role
SprayOrder ..> OrderStatus : status
Drone      ..> DroneStatus : status

note bottom of FlightLog
  Legal compliance table.
  gpsTrail = JSON array of {lat,lng,ts}
  recorded every 3s during flight.
  syncedAt: NFR06 offline sync timestamp.
  Retained >= 5 years (Decree 288/2025).
end note

note bottom of Geofence
  bufferMeters = 50m around 110kV power lines.
  Based on Long An incident (D1 Pain Point 4).
  FR11(c) alert trigger + FR12 boundary setup.
end note

note bottom of AuditLog
  Append-only. Never updated or deleted.
  Covers: weather override (UC01/UC06),
  report export (UC08), data access (UC10).
  NFR05 — Decree 288 audit trail requirement.
end note

note bottom of PesticideStock
  Tach khoi Pesticide de quan ly ton kho
  theo tung HTX (FR16). Pesticide chi luu
  thong tin master registry (BVTV approval).
end note

@enduml
